# fastapi-boilerplate

./: .dockerignore  .env.exemple  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENCE  README.md  alembic.ini  docker-compose.yaml  makefile  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
app/: main.py
app/core/: config.py  security.py  utils.py
app/core/logger/: __init__.py
app/core/socketio/: message_queue.py  websocket_manager.py
app/core/sso/: apple.py  base.py  facebook.py  google.py  linkedin.py  microsoft.py
app/crud/: __init__.py  base.py  crud_async_base.py  crud_sync_base.py  user_async.py
app/crud_async/: crud_base.py
app/db/: __init__.py  session.py
app/endpoints/: api.py
app/endpoints/v1/: auth.py  user.py
app/models/: __init__.py  base.py  notification.py  user.py
app/schemas/: __init__.py  core.py  notification.py  sso.py  user.py
backend/: .gitignore  Dockerfile  alembic.ini  entrypoint-api.sh  main.py  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  api.py
backend/app/admin/api/v1/: auth.py  casbin.py  login_log.py  opera_log.py  role.py  user.py
backend/app/admin/schema/: casbin_rule.py  login_log.py  opera_log.py  role.py  user.py
backend/app/admin/service/: auth_service.py  casbin_service.py  login_log_service.py  opera_log_service.py  role_service.py  secure_token_service.py  user_service.py
backend/common/: dataclasses.py  enums.py  log.py  model.py  pagination.py  schema.py
backend/common/cloud_storage/: __init__.py  cloud_storage.py
backend/common/email_conf/: email.py
backend/common/exception/: errors.py  exception_handler.py
backend/common/response/: response_code.py  response_schema.py
backend/common/security/: jwt.py  rbac.py  sec_token.py
backend/common/socketio/: action.py  server.py
backend/common/sso/: base.py  google.py
backend/core/: conf.py  path_conf.py  registrar.py
backend/crud/: crud_base.py  crud_casbin.py  crud_login_log.py  crud_opera_log.py  crud_role.py  crud_user.py
backend/database/: db_postgres.py  db_redis.py
backend/lang/en/: app.py  auth.py
backend/lang/fr/: app.py  auth.py
backend/middleware/: access_middleware.py  i18n_middleware.py  jwt_auth_middleware.py  opera_log_middleware.py  state_middleware.py
backend/models/: __init__.py  associations.py  casbin_rule.py  login_log.py  opera_log.py  role.py  user.py
backend/schemas/: role.py  sso.py  streamlit.py  token.py  user.py
backend/seeder/: run.py
backend/seeder/json/: admin.json  user.json
backend/templates/ws/: ws.html
backend/utils/: demo_site.py  encrypt.py  health_check.py  prometheus.py  request_parse.py  serializers.py  timezone.py  trace_id.py  translator.py
devops/docker-compose/: docker-compose-ci.yml  docker-compose.yml
devops/scripts/: deploy.sh  setup_env.sh
etc/grafana/: datasource.yml
etc/prometheus/: prometheus.yml
migrations/: env.py
migrations/versions/: 2023_10_02_1037-62886383ce4e_.py  2023_10_03_0849-439c6d7415bd_.py  2023_10_09_1055-2ac5a5afd402_.py
seeder/: run.py
seeder/json/: user.json
