[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Fastapi boilerplate"
authors = ["Kaanari <admin@kaanari.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.14.0"
fastapi = { extras = ["standard"], version = "^0.115.5" }
sqlalchemy = "^2.0.35"
asgi-correlation-id = "^4.3.3"
loguru = "^0.7.2"
fastapi-pagination = "^0.12.29"
python-ulid = "^2.7.0"
redis = "^5.1.0"
msgspec = "^0.18.6"
sqlalchemy-crud-plus = "^1.4.0"
fastapi-limiter = "^0.1.6"
asgiref = "^3.8.1"
xdbsearchip = "^1.0.2"
user-agents = "^2.2.0"
phonenumbers = "^8.13.46"
asyncpg = "^0.29.0"
greenlet = "^3.1.1"
sqlalchemyseed = "^2.0.0"
fire = "^0.7.0"
poethepoet = "^0.29.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
casbin = "^1.36.3"
casbin-async-sqlalchemy-adapter = "^1.5.0"
cryptography = "^43.0.1"
fast-captcha = "^0.3.2"
bcrypt = "^4.2.0"
minio = "^7.2.9"
boto3 = "^1.35.39"
google-cloud-storage = "^2.18.2"
slowapi = "^0.1.9"
fastapi-mail = "^1.4.1"
itsdangerous = "^2.2.0"
prometheus-client = "^0.21.0"
opentelemetry-distro = "^0.49b2"
opentelemetry-instrumentation-fastapi = "^0.49b2"
opentelemetry-instrumentation-logging = "^0.49b2"
opentelemetry-exporter-otlp = "^1.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
makemigrations = { "shell" = "alembic revision --autogenerate", help = "Automatic creation of database migration files" }
migrate = { "shell" = "alembic upgrade heads", help = "Database migration" }
downgrade = { "shell" = "alembic downgrade -1", help = "Downgrade the last migration" }
drop-tables = { "cmd" = "python3 -m seeder.run drop-tables", help = "Drop all tables" }
seed = { "cmd" = "python3 -m seeder.run seed", help = "Seed database" }
dev = { "cmd" = "fastapi dev", help = "Run this app in dev mode" }
prod = { "cmd" = "fastapi run", help = "Run this app in production" }
format = { "cmd" = "pre-commit run --all-files", help = "Format code using pre-commit" }
